trainings/RUN_08/.ipynb_checkpoints/out-checkpoint.out
  File "time_net.py", line 65
    historia.append(train_model(model
           ^
SyntaxError: invalid syntax
